fix reactivation
