# src/handlers/index.ts
@@ -124,16 +124,6 @@ const makeRouter = ({
   )
 
   router.get(
-    '/marketer/stats',
-    auth({ repo }),
-    allowOnly([ROLES.ADMIN]),
-    ah(async (_req, res) => {
-      const data = await service.other.getMarketerStats()
-      res.status(200).send({ data })
-    }),
-  )
-
-  router.get(
     '/marketer/:id/stats',
     auth({ repo }),
     allowOnly([ROLES.ADMIN]),
